--- a/public/ArcadeController/index.html
+++ b/public/ArcadeController/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=960 height=600 tabindex="-1" style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/ArcadeControllerSimulator.loader.js"></script>
+    <script src="Build/ArcadeController.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/ArcadeControllerSimulator.data.unityweb",
-        frameworkUrl: "Build/ArcadeControllerSimulator.framework.js.unityweb",
-        codeUrl: "Build/ArcadeControllerSimulator.wasm.unityweb",
+        dataUrl: "Build/ArcadeController.data.unityweb",
+        frameworkUrl: "Build/ArcadeController.framework.js.unityweb",
+        codeUrl: "Build/ArcadeController.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Riti0208",
         productName: "ArcadeControllerSimulator",
